alterações 11