@@ -1,6 +1,6 @@
 FROM amazoncorretto:17
 
-# Instala Maven manualmente (versão 3.9.6) com gzip incluído
+# Instala Maven manualmente (versão 3.9.6)
 RUN yum install -y curl tar gzip && \
     curl -fsSL https://archive.apache.org/dist/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz -o maven.tar.gz && \
     tar -xzf maven.tar.gz -C /opt && \
@@ -13,7 +13,8 @@ ENV TZ=America/Fortaleza
 COPY . /app
 WORKDIR /app
 
-RUN mvn clean install -DskipTests
+# ⚠️ Aqui está a flag mágica para resolver o erro do Lombok
+RUN mvn clean install -DskipTests -Dmaven.compiler.compilerArgs="--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
 
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "/app/target/ecos-api.jar"]
